--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "serve": "concurrently \"vite preview --port 10000\" \"json-server --watch data/db.json --port 3001\"",
-    "start": "node server.js"
+    "start": "npm run build && node server.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
