--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "node --max-old-space-size=512 node_modules/vite/bin/vite.js build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "npm run build && node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
